# whattsapp_bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bridge.js
.githooks/: pre-push
.opencode/skills/whattsapp-bot/: SKILL.md
docs/: COMMANDS.md  DATABASE.md  DEPLOYMENT.md  README.md  RULES.md  TODO.md  architecture.md  commands.md  customization.md  protocol.md
mi-portfolio/: .gitignore  index.html  script.js  style.css
script_tools/: build.sh  clean.sh  push.sh  query.sh  run.sh  status.sh  tag.sh  test.sh
src/: bot.cpp  bot.h  bridge_protocol.cpp  bridge_protocol.h  main.cpp
